# enigma-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
infra/nginx/: nginx.conf
infra/nginx/conf.d/: default.conf  ssl.conf.template
infra/terraform/: ec2.tf  ecr.tf  main.tf  outputs.tf  security_groups.tf  variables.tf  vpc.tf
scripts/: certbot-setup.sh  generate_persona_images.py
src/: main.py
src/application/chat/: __init__.py  use_cases.py
src/application/deepfake/: __init__.py  use_cases.py
src/application/fraud/: __init__.py  ports.py  use_cases.py
src/application/profile/: __init__.py  use_cases.py
src/application/report/: __init__.py  use_cases.py
src/application/training/: __init__.py  feed_content.py  graph.py  personas.py  use_cases.py  use_cases_v2.py
src/domain/chat/: __init__.py  entity.py
src/domain/deepfake/: __init__.py  entity.py
src/domain/fraud/: __init__.py  entity.py  service.py  value_objects.py
src/domain/profile/: __init__.py  value_objects.py
src/domain/report/: __init__.py  entity.py  service.py  value_objects.py
src/domain/scammer/: __init__.py  entity.py  repository.py
src/infrastructure/ai/: __init__.py  clip_detector.py  cross_efficient_vit.py  face_landmark.py  face_recognition.py  genconvit_detector.py  image_quality.py  univfd_detector.py
src/infrastructure/ai/deepfake_explainer/: README.md  __init__.py  service.py
src/infrastructure/ai/deepfake_explainer/transforms/: __init__.py  albu.py
src/infrastructure/persistence/: __init__.py  neo4j_relationship_repository.py  neo4j_repository.py  qdrant_repository.py  scam_pattern_repository.py  scam_report_repository.py  scammer_network_repository.py  scammer_repository.py  seed_data.py
src/interfaces/api/: __init__.py  chat_router.py  comprehensive_router.py  deepfake_router.py  dependencies.py  fraud_router.py  network_router.py  profile_router.py  report_router.py  training_router.py  url_router.py  verify_router.py
src/shared/: config.py
src/shared/exceptions/: __init__.py
tests/application/fraud/: test_use_cases.py
tests/domain/fraud/: test_entity.py  test_service.py  test_value_objects.py
tests/interfaces/api/: test_fraud_router.py
